# FL-based-Sector-Selection

./: README.md  pyproject.toml
code/Missing_info/: main.py
code/centralized_and_local/: ModelHandler.py  all_test.py  custom_metrics.py  generate_randperm.py  main.py
code/federated/: federated_learning.py  models.py
